# ember-retired-repositories-old-renamed-2017feb07

./: .egup.tags  .gitmodules  README.md
arcmaj3-client/: .keep
pre-git/: README.md
pre-git/productiondata/: ProductionData_AsOf2November2013.7z
pre-git/productiondata/ProductionData_AsOf2November2013/: 9-29-12-log.html  Add-ons Manager.xul.maff  Cropped sunset Master2 2 August 2013.odp  Cursor-13December2012-2.cursor  arrow  (+49 more)
pre-git/productiondata/ProductionData_AsOf2November2013/Software/appmenu-kde/src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  menubarapplet.cpp  menubarapplet.h  menubarapplet.moc  menucloner.moc  menuwidget.cpp  menuwidget.h  menuwidget.moc  plasma_applet_menubar_automoc.cpp.files  windowmenumanager.moc
stuff/: 33.html  79774-sparkler-0.9.tar.bz2  9-29-12-log_1.html  BugsOngoing.odt  Cursor-13December2012-4.xcf  Cursor-13December2012.cursor  Cursor-13December2012.xcf  Cursor-14December2012-9.cursor  Cursor-14December2012-after-midnight-of-13December2012-5.cursor  Cursor-17December2012-after-midnight-of-16December2012-12.cursor  Cursor-17December2012-after-midnight-of-16December2012-12.xcf  How to Make a Cursors File for Ubuntu | eHow.com.html.maff  WreatheCredits.abw  basic2-1September2012_1  commitslog6August2012_1.txt  disabling collectd 10 June 2013  hidefiles.diff  keyboard-cropped-07July2012  kolibri_0.7.7.0_iso_en.7z  mintrayr-1.0.xpi  showpost.php.html  sources.list  status  system log issue — collectd lockups 10 June 2013  temp-sources.list-6August2012  test.odb  tree  vlc-log-06August2012.txt  website.tar.bz2
(+10110 files in other folders)
